<?xml version="1.0"?>
<package format="2">
  <name>ultrasonic_sensor</name>
  <version>0.0.0</version>
  <description>The ultrasonic_sensor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="NicoNellip@todo.todo">rasp</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
    
  <build_depend>rclcpp</build_depend>

  <build_depend>rmw_implementation</build_depend>
     
  <build_depend>std_msgs</build_depend>    
    
  <build_depend>geometry_msgs</build_depend>    
    
  <exec_depend>rclcpp</exec_depend>
  
  <exec_depend>rmw_implementation</exec_depend>    
    
  <exec_depend>std_msgs</exec_depend>    
  
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>     

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <build_type>ament_cmake</build_type>

  </export>
</package>






